sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:15: error: illegal start of simple expression
    if (isSmaller(i,i+1))){
                         ^